# QuestionApp

./: CMakeLists.txt  Question.cpp  Question.h  QuestionManager.cpp  QuestionManager.h  QuizGame.cpp  QuizGame.h  config.json  main.cpp  questions.json
question/: Question.cpp  Question.h  QuestionManager.cpp  QuestionManager.h
quiz/: Quiz.cpp  Quiz.h  QuizType.cpp  QuizType.h
storage/: Storage.cpp  Storage.h
